2007-03-05  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/geany.docbook:
   Added single line comment examples for clarification.


2007-03-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/project.c, src/project.h:
   Add project run command support. Run command is a custom command-line
   and can include arguments.
   Make 'Choose project filename' dialog use a Save button.


2007-03-03  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c:
   Moved all code for checking and creating the geany run script
   temporary file from build_run_cmd() to prepare_run_script().
 * src/build.c, src/utils.c:
   Fix memory leak with utils_remove_ext_from_filename().
 * src/build.c:
   Fix memory leak, remove unused build_create_shellscript() argument.
 * src/build.c:
   Use UTF-8 for missing executable error message.


2007-03-02  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/win32.c:
   Added new file filter for Open File dialog to only show supported
   source files (for native Win32 dialog).
 * src/main.c: Changed location of translation files to lib\locale
               on Win32.
 * geany.nsi: Added NSIS installer script for the Win32 installer.
 * data/filetypes.c, data/filetypes.cpp, src/highlighting.c:
   Added support for secondary keywords for filetypes C and C++.
 * doc/geany.docbook: Fixed typo (thanks to John Gabriele).


2007-03-01  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/project.c, src/project.h:
   Run Make All and Make Custom from the project base directory, if set.
   Add project_get_make_dir().


2007-03-01  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/tools.c, src/utils.c:
   Applied patch from Jeff Pohlmeyer to improve the custom command
   execution code(thanks).
 * src/sciwrappers.c, src/sciwrappers.h:
   Added sci_get_selection_mode(), sci_set_selection_mode(),
   sci_get_pos_at_line_sel_start(), sci_get_pos_at_line_sel_end().
 * src/document.c: